--- a/css/index.css
+++ b/css/index.css
@@ -68,6 +68,12 @@ body {
                                       /* offset horizontal: half of image width and text area width */
     }
 }
+#map-canvas {
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px
+}
 
 h1 {
     font-size:24px;
