--- a/css/index.css
+++ b/css/index.css
@@ -59,6 +59,17 @@ body {
                                    /* offset horizontal: half of text area width */
 }
 
+div[data-role="content"] {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#report-button {
+    bottom: 0;
+    position: absolute;
+}
+
 /* Landscape layout (with min-width) */
 @media screen and (min-aspect-ratio: 1/1) and (min-width:400px) {
     .app {
